--- a/Arabic_Classification.ipynb
+++ b/Arabic_Classification.ipynb
@@ -32,8 +32,7 @@
     },
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "accelerator": "GPU",
     "widgets": {
@@ -1070,16 +1069,6 @@
   "nbformat_minor": 0,
   "nbformat": 4,
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mernaahany/Arabic-Classification/blob/main/Arabic_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "source": [
